# ellenex

./: README.md  doover_config.json  pyproject.toml
payload_formatters/: dl_formatter.js  ul_formatter.js
processor/: target.py
src/ellenex/: __init__.py  app_config.py  app_tags.py  app_ui.py  application.py  decoder.py
